apps/replicate-backend/1-backend.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    skupper.io/proxy: "http" # <1>
  labels:
    app.kubernetes.io/name: "hybrid-cloud-backend"
    app.kubernetes.io/version: "1.0.0"
  name: "hybrid-cloud-backend"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "hybrid-cloud-backend"
    app.kubernetes.io/version: "1.0.0"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app.kubernetes.io/name: "hybrid-cloud-backend"
    app.kubernetes.io/version: "1.0.0"
  name: "hybrid-cloud-backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hybrid-cloud-backend"
      app.kubernetes.io/version: "1.0.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hybrid-cloud-backend"
        app.kubernetes.io/version: "1.0.0"
    spec:
      serviceAccountName: "hybrid-cloud-backend"
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        image: "quay.io/rhdevelopers/hybrid-cloud-backend:1.0.0"
        imagePullPolicy: "Always"
        name: "hybrid-cloud-backend"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
