apps/replicate-backend/2-frontend.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app.kubernetes.io/name: "hybrid-cloud-frontend"
    app.kubernetes.io/version: "1.0.0"
  name: "hybrid-cloud-frontend"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "hybrid-cloud-frontend"
    app.kubernetes.io/version: "1.0.0"
  type: "LoadBalancer"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app.kubernetes.io/name: "hybrid-cloud-frontend"
    app.kubernetes.io/version: "1.0.0"
  name: "hybrid-cloud-frontend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hybrid-cloud-frontend"
      app.kubernetes.io/version: "1.0.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hybrid-cloud-frontend"
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        image: "quay.io/rhdevelopers/hybrid-cloud-frontend:1.0.0"
        imagePullPolicy: "IfNotPresent"
        name: "hybrid-cloud-frontend"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
      serviceAccount: "hybrid-cloud-frontend"
---
