apps/replicate-backend/3-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  labels:
    app.kubernetes.io/name: "hybrid-cloud-frontend"
    app.kubernetes.io/version: "1.0.0"
  name: "hybrid-cloud-frontend"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: "hybrid-cloud-frontend"
                port:
                  number: 8080
            path: "/"
            pathType: Prefix
