apps/replicate-backend/3-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hybrid-cloud-frontend
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: hybrid-cloud-frontend
    weight: 100
  wildcardPolicy: None
